--- a/src/app/components/application-header/application-header.component.html
+++ b/src/app/components/application-header/application-header.component.html
@@ -1,29 +1,21 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbarP bg-primary">
+  <div class="row d-flex justify-content-center">
+    <div class="col-4 col-lg-6 col-md-6 mt-5">
+        <strong><a class="head-text text-light" href="#">Todo-List AA</a></strong>
+    </div>
+  </div>
+  <div class="row d-flex justify-content-center">
+    <div class="col-6 col-lg-6 col-md-8 mt-2 mr-5">
+      <div class="row d-flex justify-content-end">
+          <label>Adicione uma nova todo!</label>
+      </div>
+      <input type="text" class="form-control" placeholder="Digite a Todo">
+      <div class="row d-flex justify-content-end my-1">
+        <button class="btn btn-add">Adicionar</button>
+      </div>
+    </div>
+  </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown link
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-      </ul>
-    </div>
   </nav>
