--- a/src/app/components/rodape/rodape.component.html
+++ b/src/app/components/rodape/rodape.component.html
@@ -1,1 +1,8 @@
-<p>rodape works!</p>
+<div class="container-fluid">
+    <hr>
+    <div class="row d-flex justify-content-center">
+        <div class="col text-center">
+           <strong>Copyrights</strong> 
+        </div>
+    </div>
+</div>
