--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,1 +1,48 @@
-<p>todo-list works!</p>
+<div class="container-fluid">
+    <div class="row d-flex justify-content-center">
+        <div class="col-lg-8 col-md-10 col-10 my-2">
+            <div class="row my-2">
+                <button class="button mx-1">Complete</button>
+                <button class="button mx-1">Delete</button>  
+                <div class="col-lg-9 col-md-8 col-6">
+                    <p>Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,</p>
+                </div>
+            </div>
+            <div class="row my-2">
+                <button class="button mx-1">Complete</button>
+                <button class="button mx-1">Delete</button>  
+                <div class="col-lg-9 col-md-8 col-6">
+                    <p>Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,</p>
+                </div>
+            </div>
+            <div class="row my-2">
+                    <button class="button mx-1">Complete</button>
+                    <button class="button mx-1">Delete</button>  
+                    <div class="col-lg-9 col-md-8 col-6">
+                        <p>Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,</p>
+                    </div>
+                </div>
+                <div class="row my-2">
+                    <button class="button mx-1">Complete</button>
+                    <button class="button mx-1">Delete</button>  
+                    <div class="col-lg-9 col-md-8 col-6">
+                        <p>Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,</p>
+                    </div>
+                </div>
+                <div class="row my-2">
+                        <button class="button mx-1">Complete</button>
+                        <button class="button mx-1">Delete</button>  
+                        <div class="col-lg-9 col-md-8 col-6">
+                            <p>Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,</p>
+                        </div>
+                    </div>
+                    <div class="row my-2">
+                        <button class="button mx-1">Complete</button>
+                        <button class="button mx-1">Delete</button>  
+                        <div class="col-lg-9 col-md-8 col-6">
+                            <p>Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,</p>
+                        </div>
+                    </div>
+        </div>       
+    </div>
+</div>
